--- a/crypto/docker-compose.yml
+++ b/crypto/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.8"
 services:
-  example:
+  time:
     build:
-      context: ./binary
+      context: ./Time
       dockerfile: ./Dockerfile
     ports:
-      - "12352:12345"
+      - "12350:12345"
